// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`engine profiles (2D Phaser / 3D three.js) > BYTE-IDENTITY: a project with NO overlay.html builds the exact pre-overlay srcdoc (both engines) > no-overlay-phaser 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8">

<script>
(function () {
  var isExtensionSource = function (src) {
    return /^(chrome|moz|safari-web|ms-browser)-extension:/.test(src || '');
  };
  window.addEventListener('error', function (e) {
    if (isExtensionSource(e.filename)) {
      e.preventDefault();          // no "Uncaught …" console entry
      e.stopImmediatePropagation(); // never reaches the console relay below
    }
  }, true);
})();
</script>
<meta name="viewport" content="width=device-width, initial-scale=1.0">
<style>html,body{margin:0;height:100%;background:#000;overflow:hidden}#game{width:100%;height:100%}#game canvas{display:block}</style>
</head><body>
<div id="game"></div>

<script>
(function () {
  // Fix-turn evidence (D-HARN-11a): when an Error OBJECT is available (uncaught
  // window errors, Error args to console.error) its stack rides the console line
  // clipped — "Ask AI to fix" builds real evidence from it. Console-relay ONLY:
  // the RunReport wire shape never carries stacks (GameFrame strips them).
  var clipStack = function (s) { return String(s).slice(0, 1000); };
  var send = function (level, args) {
    try {
      var msg = {
        __airbotixConsole: true,
        level: level,
        text: Array.prototype.map.call(args, String).join(' ')
      };
      if (level === 'error') {
        for (var i = 0; i < args.length; i++) {
          var a = args[i];
          if (a && typeof a === 'object' && a.stack) { msg.stack = clipStack(a.stack); break; }
        }
      }
      parent.postMessage(msg, '*');
    } catch (e) {}
  };
  ['log', 'info', 'warn', 'error'].forEach(function (level) {
    var orig = console[level];
    console[level] = function () { send(level, arguments); orig && orig.apply(console, arguments); };
  });
  // Uncaught errors carry a location — post it structured so the console can show
  // file:line and the editor can jump there (sourceURL makes filename = the file).
  window.addEventListener('error', function (e) {
    if (/^(chrome|moz|safari-web|ms-browser)-extension:/.test(e.filename || '')) return;
    try {
      parent.postMessage({
        __airbotixConsole: true,
        level: 'error',
        text: e.message || 'Error',
        loc: e.filename ? { file: e.filename, line: e.lineno || 0, col: e.colno || 0 } : undefined,
        stack: e.error && e.error.stack ? clipStack(e.error.stack) : undefined
      }, '*');
    } catch (err) {}
  });
  window.addEventListener('unhandledrejection', function (e) {
    send('error', ['Unhandled promise: ' + (e.reason && e.reason.message || e.reason)]);
  });
  parent.postMessage({ __airbotixConsole: true, level: 'info', text: 'ready' }, '*');
})();
</script>

<script>
(function () {
  try {
    var Native = window.AudioContext || window.webkitAudioContext;
    var contexts = [];
    // Persist the latest mute/pause intent so audio that STARTS after the kid
    // already muted/paused (a lazily-created context, a BGM track that begins on
    // a later scene) is born silenced too — not only what was already playing.
    var mutedState = false;
    var pausedState = false;
    function attach(ctx) {
      try {
        if (!ctx || ctx.__airbotixTracked) return;
        ctx.__airbotixTracked = true;
        contexts.push(ctx);
        // Re-route the graph through a master gain we can zero out for mute. If
        // this fails, the context is still tracked so pause (suspend) works.
        var realDest = ctx.destination;
        var gain = ctx.createGain();
        gain.connect(realDest);
        Object.defineProperty(ctx, 'destination', { configurable: true, get: function () { return gain; } });
        ctx.__airbotixGain = gain;
        gain.gain.value = mutedState ? 0 : 1;
        if (pausedState) ctx.suspend();
      } catch (e) {}
    }
    if (Native) {
      function Patched(options) {
        var ctx = new Native(options);
        attach(ctx);
        return ctx;
      }
      Patched.prototype = Native.prototype;
      for (var k in Native) { try { Patched[k] = Native[k]; } catch (e) {} }
      window.AudioContext = Patched;
      if (window.webkitAudioContext) window.webkitAudioContext = Patched;
    }
    // Track every media element that ever plays — including a "new Audio(src)"
    // that a game never inserts into the DOM (the most common way a hand-written
    // BGM track slips past querySelectorAll('audio,video'): mute/pause silenced
    // the WebAudio engine but the detached looping element played on).
    var tracked = [];
    try {
      var MediaProto = window.HTMLMediaElement && window.HTMLMediaElement.prototype;
      if (MediaProto && MediaProto.play) {
        var __origPlay = MediaProto.play;
        MediaProto.play = function () {
          try {
            if (tracked.indexOf(this) === -1) tracked.push(this);
            if (mutedState) this.muted = true;
          } catch (e) {}
          return __origPlay.apply(this, arguments);
        };
      }
    } catch (e) {}
    function media() {
      var out = [];
      try {
        var dom = document.querySelectorAll('audio,video');
        for (var i = 0; i < dom.length; i++) out.push(dom[i]);
      } catch (e) {}
      for (var j = 0; j < tracked.length; j++) {
        if (out.indexOf(tracked[j]) === -1) out.push(tracked[j]);
      }
      return out;
    }
    var mediaPaused = [];
    function setMuted(on) {
      mutedState = on;
      for (var i = 0; i < contexts.length; i++) {
        try { if (contexts[i].__airbotixGain) contexts[i].__airbotixGain.gain.value = on ? 0 : 1; } catch (e) {}
      }
      var els = media();
      for (var j = 0; j < els.length; j++) { try { els[j].muted = on; } catch (e) {} }
    }
    function setPaused(on) {
      pausedState = on;
      for (var i = 0; i < contexts.length; i++) {
        try { if (on) contexts[i].suspend(); else contexts[i].resume(); } catch (e) {}
      }
      var els = media();
      if (on) {
        mediaPaused = [];
        for (var j = 0; j < els.length; j++) {
          try { if (!els[j].paused) { mediaPaused.push(els[j]); els[j].pause(); } } catch (e) {}
        }
      } else {
        for (var m = 0; m < mediaPaused.length; m++) { try { mediaPaused[m].play(); } catch (e) {} }
        mediaPaused = [];
      }
    }
    window.addEventListener('message', function (e) {
      var msg = e.data;
      if (!msg || msg.__airbotixControl !== true) return;
      try {
        if (msg.action === 'pause')  setPaused(true);
        if (msg.action === 'resume') setPaused(false);
        if (msg.action === 'mute')   setMuted(true);
        if (msg.action === 'unmute') setMuted(false);
      } catch (e) {}
    });
  } catch (e) {}
})();
</script>
<script src="/vendor/phaser-4.1.0.min.js"></script>

<script>
if (!window.Phaser) {
  console.error('Could not load the game engine (Phaser). Check your connection and try again.');
}
</script>
<script>window.__airbotixDebug=false;</script>

<script>
(function () {
  if (!window.Phaser || !window.Phaser.Game) return;
  var __OrigGame = window.Phaser.Game;
  var __game = null;
  function __WrappedGame(cfg) {
    // Physics-debug toggle: force arcade debug draw (hitboxes/velocities) on,
    // regardless of the kid's config, when the runner asked for it.
    if (window.__airbotixDebug && cfg) {
      cfg.physics = cfg.physics || {};
      cfg.physics.arcade = cfg.physics.arcade || {};
      cfg.physics.arcade.debug = true;
    }
    __game = new __OrigGame(cfg);
    return __game;
  }
  __WrappedGame.prototype = __OrigGame.prototype;
  for (var k in __OrigGame) { try { __WrappedGame[k] = __OrigGame[k]; } catch (e) {} }
  window.Phaser.Game = __WrappedGame;

  window.addEventListener('message', function (e) {
    var m = e.data;
    if (!m || m.__airbotixControl !== true || !__game) return;
    try {
      if (m.action === 'pause')  __game.loop.sleep();
      if (m.action === 'resume') __game.loop.wake();
      if (m.action === 'mute')   __game.sound.mute = true;
      if (m.action === 'unmute') __game.sound.mute = false;
      if (m.action === 'snapshot') {
        // For a thumbnail. renderer.snapshot() works for WebGL (where a plain
        // canvas.toDataURL() returns blank once the drawing buffer is composited).
        if (__game.renderer && __game.renderer.snapshot) {
          __game.renderer.snapshot(function (image) {
            try { parent.postMessage({ __airbotixSnapshot: true, dataUrl: (image && image.src) || null }, '*'); } catch (er) {}
          });
        } else {
          parent.postMessage({ __airbotixSnapshot: true, dataUrl: __game.canvas ? __game.canvas.toDataURL() : null }, '*');
        }
      }
    } catch (e) { try { parent.postMessage({ __airbotixSnapshot: true, dataUrl: null }, '*'); } catch (er) {} }
  });

  setInterval(function () {
    if (!__game) return;
    try {
      parent.postMessage({
        __airbotixStat: true,
        fps: Math.round(__game.loop.actualFps || 0),
        paused: !__game.loop.running,
        frames: (__game.loop && typeof __game.loop.frame === 'number') ? __game.loop.frame : 0
      }, '*');
    } catch (e) {}
  }, 500);
})();
</script>

<script>
(function () {
  try {
    window.addEventListener('message', function (e) {
      var m = e.data;
      if (!m || m.__airbotixControl !== true || m.action !== 'report') return;
      var canvas = null, present = false, nonBlank = null, sampled = 0;
      try {
        canvas = document.querySelector('#game canvas');
        present = !!canvas;
      } catch (err) {}
      try {
        if (canvas) {
          var sample = document.createElement('canvas');
          sample.width = 8; sample.height = 8;
          var ctx = sample.getContext('2d');
          if (ctx) {
            ctx.drawImage(canvas, 0, 0, 8, 8);
            var px = ctx.getImageData(0, 0, 8, 8).data;
            var lit = 0;
            for (var i = 0; i < px.length; i += 4) {
              if (px[i + 3] > 0 && (px[i] > 0 || px[i + 1] > 0 || px[i + 2] > 0)) lit++;
            }
            nonBlank = lit > 0;
            sampled = 64;
          }
        }
      } catch (err) { nonBlank = null; sampled = 0; }
      try {
        parent.postMessage({ __airbotixRunReport: true, canvas: { present: present, nonBlank: nonBlank, sampled: sampled } }, '*');
      } catch (err) {}
    });
  } catch (err) {}
})();
</script>
<script>class Game {
  go() {}
}

//# sourceURL=src/scenes/Game.js
</script>
<script>new Game();
start();
//# sourceURL=main.js
</script>
</body></html>"
`;

exports[`engine profiles (2D Phaser / 3D three.js) > BYTE-IDENTITY: a project with NO overlay.html builds the exact pre-overlay srcdoc (both engines) > no-overlay-phaser-with-css 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8">

<script>
(function () {
  var isExtensionSource = function (src) {
    return /^(chrome|moz|safari-web|ms-browser)-extension:/.test(src || '');
  };
  window.addEventListener('error', function (e) {
    if (isExtensionSource(e.filename)) {
      e.preventDefault();          // no "Uncaught …" console entry
      e.stopImmediatePropagation(); // never reaches the console relay below
    }
  }, true);
})();
</script>
<meta name="viewport" content="width=device-width, initial-scale=1.0">
<style>html,body{margin:0;height:100%;background:#000;overflow:hidden}#game{width:100%;height:100%}#game canvas{display:block}body{background:#111}</style>
</head><body>
<div id="game"></div>

<script>
(function () {
  // Fix-turn evidence (D-HARN-11a): when an Error OBJECT is available (uncaught
  // window errors, Error args to console.error) its stack rides the console line
  // clipped — "Ask AI to fix" builds real evidence from it. Console-relay ONLY:
  // the RunReport wire shape never carries stacks (GameFrame strips them).
  var clipStack = function (s) { return String(s).slice(0, 1000); };
  var send = function (level, args) {
    try {
      var msg = {
        __airbotixConsole: true,
        level: level,
        text: Array.prototype.map.call(args, String).join(' ')
      };
      if (level === 'error') {
        for (var i = 0; i < args.length; i++) {
          var a = args[i];
          if (a && typeof a === 'object' && a.stack) { msg.stack = clipStack(a.stack); break; }
        }
      }
      parent.postMessage(msg, '*');
    } catch (e) {}
  };
  ['log', 'info', 'warn', 'error'].forEach(function (level) {
    var orig = console[level];
    console[level] = function () { send(level, arguments); orig && orig.apply(console, arguments); };
  });
  // Uncaught errors carry a location — post it structured so the console can show
  // file:line and the editor can jump there (sourceURL makes filename = the file).
  window.addEventListener('error', function (e) {
    if (/^(chrome|moz|safari-web|ms-browser)-extension:/.test(e.filename || '')) return;
    try {
      parent.postMessage({
        __airbotixConsole: true,
        level: 'error',
        text: e.message || 'Error',
        loc: e.filename ? { file: e.filename, line: e.lineno || 0, col: e.colno || 0 } : undefined,
        stack: e.error && e.error.stack ? clipStack(e.error.stack) : undefined
      }, '*');
    } catch (err) {}
  });
  window.addEventListener('unhandledrejection', function (e) {
    send('error', ['Unhandled promise: ' + (e.reason && e.reason.message || e.reason)]);
  });
  parent.postMessage({ __airbotixConsole: true, level: 'info', text: 'ready' }, '*');
})();
</script>

<script>
(function () {
  try {
    var Native = window.AudioContext || window.webkitAudioContext;
    var contexts = [];
    // Persist the latest mute/pause intent so audio that STARTS after the kid
    // already muted/paused (a lazily-created context, a BGM track that begins on
    // a later scene) is born silenced too — not only what was already playing.
    var mutedState = false;
    var pausedState = false;
    function attach(ctx) {
      try {
        if (!ctx || ctx.__airbotixTracked) return;
        ctx.__airbotixTracked = true;
        contexts.push(ctx);
        // Re-route the graph through a master gain we can zero out for mute. If
        // this fails, the context is still tracked so pause (suspend) works.
        var realDest = ctx.destination;
        var gain = ctx.createGain();
        gain.connect(realDest);
        Object.defineProperty(ctx, 'destination', { configurable: true, get: function () { return gain; } });
        ctx.__airbotixGain = gain;
        gain.gain.value = mutedState ? 0 : 1;
        if (pausedState) ctx.suspend();
      } catch (e) {}
    }
    if (Native) {
      function Patched(options) {
        var ctx = new Native(options);
        attach(ctx);
        return ctx;
      }
      Patched.prototype = Native.prototype;
      for (var k in Native) { try { Patched[k] = Native[k]; } catch (e) {} }
      window.AudioContext = Patched;
      if (window.webkitAudioContext) window.webkitAudioContext = Patched;
    }
    // Track every media element that ever plays — including a "new Audio(src)"
    // that a game never inserts into the DOM (the most common way a hand-written
    // BGM track slips past querySelectorAll('audio,video'): mute/pause silenced
    // the WebAudio engine but the detached looping element played on).
    var tracked = [];
    try {
      var MediaProto = window.HTMLMediaElement && window.HTMLMediaElement.prototype;
      if (MediaProto && MediaProto.play) {
        var __origPlay = MediaProto.play;
        MediaProto.play = function () {
          try {
            if (tracked.indexOf(this) === -1) tracked.push(this);
            if (mutedState) this.muted = true;
          } catch (e) {}
          return __origPlay.apply(this, arguments);
        };
      }
    } catch (e) {}
    function media() {
      var out = [];
      try {
        var dom = document.querySelectorAll('audio,video');
        for (var i = 0; i < dom.length; i++) out.push(dom[i]);
      } catch (e) {}
      for (var j = 0; j < tracked.length; j++) {
        if (out.indexOf(tracked[j]) === -1) out.push(tracked[j]);
      }
      return out;
    }
    var mediaPaused = [];
    function setMuted(on) {
      mutedState = on;
      for (var i = 0; i < contexts.length; i++) {
        try { if (contexts[i].__airbotixGain) contexts[i].__airbotixGain.gain.value = on ? 0 : 1; } catch (e) {}
      }
      var els = media();
      for (var j = 0; j < els.length; j++) { try { els[j].muted = on; } catch (e) {} }
    }
    function setPaused(on) {
      pausedState = on;
      for (var i = 0; i < contexts.length; i++) {
        try { if (on) contexts[i].suspend(); else contexts[i].resume(); } catch (e) {}
      }
      var els = media();
      if (on) {
        mediaPaused = [];
        for (var j = 0; j < els.length; j++) {
          try { if (!els[j].paused) { mediaPaused.push(els[j]); els[j].pause(); } } catch (e) {}
        }
      } else {
        for (var m = 0; m < mediaPaused.length; m++) { try { mediaPaused[m].play(); } catch (e) {} }
        mediaPaused = [];
      }
    }
    window.addEventListener('message', function (e) {
      var msg = e.data;
      if (!msg || msg.__airbotixControl !== true) return;
      try {
        if (msg.action === 'pause')  setPaused(true);
        if (msg.action === 'resume') setPaused(false);
        if (msg.action === 'mute')   setMuted(true);
        if (msg.action === 'unmute') setMuted(false);
      } catch (e) {}
    });
  } catch (e) {}
})();
</script>
<script src="/vendor/phaser-4.1.0.min.js"></script>

<script>
if (!window.Phaser) {
  console.error('Could not load the game engine (Phaser). Check your connection and try again.');
}
</script>
<script>window.__airbotixDebug=false;</script>

<script>
(function () {
  if (!window.Phaser || !window.Phaser.Game) return;
  var __OrigGame = window.Phaser.Game;
  var __game = null;
  function __WrappedGame(cfg) {
    // Physics-debug toggle: force arcade debug draw (hitboxes/velocities) on,
    // regardless of the kid's config, when the runner asked for it.
    if (window.__airbotixDebug && cfg) {
      cfg.physics = cfg.physics || {};
      cfg.physics.arcade = cfg.physics.arcade || {};
      cfg.physics.arcade.debug = true;
    }
    __game = new __OrigGame(cfg);
    return __game;
  }
  __WrappedGame.prototype = __OrigGame.prototype;
  for (var k in __OrigGame) { try { __WrappedGame[k] = __OrigGame[k]; } catch (e) {} }
  window.Phaser.Game = __WrappedGame;

  window.addEventListener('message', function (e) {
    var m = e.data;
    if (!m || m.__airbotixControl !== true || !__game) return;
    try {
      if (m.action === 'pause')  __game.loop.sleep();
      if (m.action === 'resume') __game.loop.wake();
      if (m.action === 'mute')   __game.sound.mute = true;
      if (m.action === 'unmute') __game.sound.mute = false;
      if (m.action === 'snapshot') {
        // For a thumbnail. renderer.snapshot() works for WebGL (where a plain
        // canvas.toDataURL() returns blank once the drawing buffer is composited).
        if (__game.renderer && __game.renderer.snapshot) {
          __game.renderer.snapshot(function (image) {
            try { parent.postMessage({ __airbotixSnapshot: true, dataUrl: (image && image.src) || null }, '*'); } catch (er) {}
          });
        } else {
          parent.postMessage({ __airbotixSnapshot: true, dataUrl: __game.canvas ? __game.canvas.toDataURL() : null }, '*');
        }
      }
    } catch (e) { try { parent.postMessage({ __airbotixSnapshot: true, dataUrl: null }, '*'); } catch (er) {} }
  });

  setInterval(function () {
    if (!__game) return;
    try {
      parent.postMessage({
        __airbotixStat: true,
        fps: Math.round(__game.loop.actualFps || 0),
        paused: !__game.loop.running,
        frames: (__game.loop && typeof __game.loop.frame === 'number') ? __game.loop.frame : 0
      }, '*');
    } catch (e) {}
  }, 500);
})();
</script>

<script>
(function () {
  try {
    window.addEventListener('message', function (e) {
      var m = e.data;
      if (!m || m.__airbotixControl !== true || m.action !== 'report') return;
      var canvas = null, present = false, nonBlank = null, sampled = 0;
      try {
        canvas = document.querySelector('#game canvas');
        present = !!canvas;
      } catch (err) {}
      try {
        if (canvas) {
          var sample = document.createElement('canvas');
          sample.width = 8; sample.height = 8;
          var ctx = sample.getContext('2d');
          if (ctx) {
            ctx.drawImage(canvas, 0, 0, 8, 8);
            var px = ctx.getImageData(0, 0, 8, 8).data;
            var lit = 0;
            for (var i = 0; i < px.length; i += 4) {
              if (px[i + 3] > 0 && (px[i] > 0 || px[i + 1] > 0 || px[i + 2] > 0)) lit++;
            }
            nonBlank = lit > 0;
            sampled = 64;
          }
        }
      } catch (err) { nonBlank = null; sampled = 0; }
      try {
        parent.postMessage({ __airbotixRunReport: true, canvas: { present: present, nonBlank: nonBlank, sampled: sampled } }, '*');
      } catch (err) {}
    });
  } catch (err) {}
})();
</script>
<script>class Game {
  go() {}
}

//# sourceURL=src/scenes/Game.js
</script>
<script>new Game();
start();
//# sourceURL=main.js
</script>
</body></html>"
`;

exports[`engine profiles (2D Phaser / 3D three.js) > BYTE-IDENTITY: a project with NO overlay.html builds the exact pre-overlay srcdoc (both engines) > no-overlay-three 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8">

<script>
(function () {
  var isExtensionSource = function (src) {
    return /^(chrome|moz|safari-web|ms-browser)-extension:/.test(src || '');
  };
  window.addEventListener('error', function (e) {
    if (isExtensionSource(e.filename)) {
      e.preventDefault();          // no "Uncaught …" console entry
      e.stopImmediatePropagation(); // never reaches the console relay below
    }
  }, true);
})();
</script>
<meta name="viewport" content="width=device-width, initial-scale=1.0">
<style>html,body{margin:0;height:100%;background:#000;overflow:hidden}#game{width:100%;height:100%}#game canvas{display:block}</style>
</head><body>
<div id="game"></div>

<script>
(function () {
  // Fix-turn evidence (D-HARN-11a): when an Error OBJECT is available (uncaught
  // window errors, Error args to console.error) its stack rides the console line
  // clipped — "Ask AI to fix" builds real evidence from it. Console-relay ONLY:
  // the RunReport wire shape never carries stacks (GameFrame strips them).
  var clipStack = function (s) { return String(s).slice(0, 1000); };
  var send = function (level, args) {
    try {
      var msg = {
        __airbotixConsole: true,
        level: level,
        text: Array.prototype.map.call(args, String).join(' ')
      };
      if (level === 'error') {
        for (var i = 0; i < args.length; i++) {
          var a = args[i];
          if (a && typeof a === 'object' && a.stack) { msg.stack = clipStack(a.stack); break; }
        }
      }
      parent.postMessage(msg, '*');
    } catch (e) {}
  };
  ['log', 'info', 'warn', 'error'].forEach(function (level) {
    var orig = console[level];
    console[level] = function () { send(level, arguments); orig && orig.apply(console, arguments); };
  });
  // Uncaught errors carry a location — post it structured so the console can show
  // file:line and the editor can jump there (sourceURL makes filename = the file).
  window.addEventListener('error', function (e) {
    if (/^(chrome|moz|safari-web|ms-browser)-extension:/.test(e.filename || '')) return;
    try {
      parent.postMessage({
        __airbotixConsole: true,
        level: 'error',
        text: e.message || 'Error',
        loc: e.filename ? { file: e.filename, line: e.lineno || 0, col: e.colno || 0 } : undefined,
        stack: e.error && e.error.stack ? clipStack(e.error.stack) : undefined
      }, '*');
    } catch (err) {}
  });
  window.addEventListener('unhandledrejection', function (e) {
    send('error', ['Unhandled promise: ' + (e.reason && e.reason.message || e.reason)]);
  });
  parent.postMessage({ __airbotixConsole: true, level: 'info', text: 'ready' }, '*');
})();
</script>

<script>
(function () {
  try {
    var Native = window.AudioContext || window.webkitAudioContext;
    var contexts = [];
    // Persist the latest mute/pause intent so audio that STARTS after the kid
    // already muted/paused (a lazily-created context, a BGM track that begins on
    // a later scene) is born silenced too — not only what was already playing.
    var mutedState = false;
    var pausedState = false;
    function attach(ctx) {
      try {
        if (!ctx || ctx.__airbotixTracked) return;
        ctx.__airbotixTracked = true;
        contexts.push(ctx);
        // Re-route the graph through a master gain we can zero out for mute. If
        // this fails, the context is still tracked so pause (suspend) works.
        var realDest = ctx.destination;
        var gain = ctx.createGain();
        gain.connect(realDest);
        Object.defineProperty(ctx, 'destination', { configurable: true, get: function () { return gain; } });
        ctx.__airbotixGain = gain;
        gain.gain.value = mutedState ? 0 : 1;
        if (pausedState) ctx.suspend();
      } catch (e) {}
    }
    if (Native) {
      function Patched(options) {
        var ctx = new Native(options);
        attach(ctx);
        return ctx;
      }
      Patched.prototype = Native.prototype;
      for (var k in Native) { try { Patched[k] = Native[k]; } catch (e) {} }
      window.AudioContext = Patched;
      if (window.webkitAudioContext) window.webkitAudioContext = Patched;
    }
    // Track every media element that ever plays — including a "new Audio(src)"
    // that a game never inserts into the DOM (the most common way a hand-written
    // BGM track slips past querySelectorAll('audio,video'): mute/pause silenced
    // the WebAudio engine but the detached looping element played on).
    var tracked = [];
    try {
      var MediaProto = window.HTMLMediaElement && window.HTMLMediaElement.prototype;
      if (MediaProto && MediaProto.play) {
        var __origPlay = MediaProto.play;
        MediaProto.play = function () {
          try {
            if (tracked.indexOf(this) === -1) tracked.push(this);
            if (mutedState) this.muted = true;
          } catch (e) {}
          return __origPlay.apply(this, arguments);
        };
      }
    } catch (e) {}
    function media() {
      var out = [];
      try {
        var dom = document.querySelectorAll('audio,video');
        for (var i = 0; i < dom.length; i++) out.push(dom[i]);
      } catch (e) {}
      for (var j = 0; j < tracked.length; j++) {
        if (out.indexOf(tracked[j]) === -1) out.push(tracked[j]);
      }
      return out;
    }
    var mediaPaused = [];
    function setMuted(on) {
      mutedState = on;
      for (var i = 0; i < contexts.length; i++) {
        try { if (contexts[i].__airbotixGain) contexts[i].__airbotixGain.gain.value = on ? 0 : 1; } catch (e) {}
      }
      var els = media();
      for (var j = 0; j < els.length; j++) { try { els[j].muted = on; } catch (e) {} }
    }
    function setPaused(on) {
      pausedState = on;
      for (var i = 0; i < contexts.length; i++) {
        try { if (on) contexts[i].suspend(); else contexts[i].resume(); } catch (e) {}
      }
      var els = media();
      if (on) {
        mediaPaused = [];
        for (var j = 0; j < els.length; j++) {
          try { if (!els[j].paused) { mediaPaused.push(els[j]); els[j].pause(); } } catch (e) {}
        }
      } else {
        for (var m = 0; m < mediaPaused.length; m++) { try { mediaPaused[m].play(); } catch (e) {} }
        mediaPaused = [];
      }
    }
    window.addEventListener('message', function (e) {
      var msg = e.data;
      if (!msg || msg.__airbotixControl !== true) return;
      try {
        if (msg.action === 'pause')  setPaused(true);
        if (msg.action === 'resume') setPaused(false);
        if (msg.action === 'mute')   setMuted(true);
        if (msg.action === 'unmute') setMuted(false);
      } catch (e) {}
    });
  } catch (e) {}
})();
</script>
<script src="/vendor/three-0.184.0.global.js"></script>

<script>
if (!window.THREE) {
  console.error('Could not load the 3D game engine (three.js). Check your connection and try again.');
}
</script>

<script>
(function () {
  try {
    if (!window.THREE) return;
    function post(url, ok, err) {
      try {
        var u = String(url);
        var m = { __airbotixAsset: true, url: u.slice(0, 256), len: u.length, ok: ok };
        if (!ok) m.error = String(err && (err.message || err)).slice(0, 200);
        parent.postMessage(m, '*');
      } catch (e) {}
    }
    function wrap(Loader, label) {
      try {
        if (!Loader || !Loader.prototype || typeof Loader.prototype.load !== 'function') return;
        var orig = Loader.prototype.load;
        Loader.prototype.load = function (url, onLoad, onProgress, onError) {
          return orig.call(this, url, function (result) {
            post(url, true);
            if (onLoad) onLoad(result);
          }, onProgress, function (err) {
            var msg = String(err && (err.message || err)).slice(0, 200);
            post(url, false, err);
            try { console.error('[airbotix] ' + label + ' failed to load: ' + String(url).slice(0, 200) + ' — ' + msg); } catch (e) {}
            if (onError) onError(err);
          });
        };
      } catch (e) {}
    }
    wrap(window.THREE.GLTFLoader, '3D model');
    wrap(window.THREE.TextureLoader, 'Texture');
  } catch (e) {}
})();
</script>
<script>window.__airbotixDebug=false;</script>

<script>
(function () {
  var paused = false;
  var prevFrame = null, prevT = null;
  function now() { return (window.performance && performance.now) ? performance.now() : +new Date(); }
  function canvasEl() {
    var g = window.__game;
    if (g && g.renderer && g.renderer.domElement) return g.renderer.domElement;
    return document.querySelector('#game canvas');
  }
  window.addEventListener('message', function (e) {
    var m = e.data;
    if (!m || m.__airbotixControl !== true) return;
    var g = window.__game;
    try {
      if (m.action === 'pause')  { paused = true;  if (g && g.pause)  g.pause(); }
      if (m.action === 'resume') { paused = false; if (g && g.resume) g.resume(); }
      if (m.action === 'mute'    && g && g.setMuted) g.setMuted(true);
      if (m.action === 'unmute'  && g && g.setMuted) g.setMuted(false);
      if (m.action === 'snapshot') {
        var url = null;
        try { var c = canvasEl(); if (c && c.toDataURL) url = c.toDataURL(); } catch (er) {}
        parent.postMessage({ __airbotixSnapshot: true, dataUrl: url }, '*');
      }
    } catch (er) {
      try { parent.postMessage({ __airbotixSnapshot: true, dataUrl: null }, '*'); } catch (e2) {}
    }
  });
  setInterval(function () {
    var g = window.__game, fps = 0, frames = 0;
    try {
      var rf = (g && g.renderer && g.renderer.info && g.renderer.info.render)
        ? g.renderer.info.render.frame : null;
      var t = now();
      if (typeof rf === 'number' && prevFrame !== null && prevT !== null && t > prevT) {
        fps = Math.round((rf - prevFrame) * 1000 / (t - prevT));
      }
      if (typeof rf === 'number') { prevFrame = rf; prevT = t; frames = rf || 0; }
    } catch (e) {}
    try { parent.postMessage({ __airbotixStat: true, fps: fps, paused: paused, frames: frames }, '*'); } catch (e) {}
  }, 500);
})();
</script>

<script>
(function () {
  try {
    window.addEventListener('message', function (e) {
      var m = e.data;
      if (!m || m.__airbotixControl !== true || m.action !== 'report') return;
      var canvas = null, present = false, nonBlank = null, sampled = 0;
      try {
        canvas = document.querySelector('#game canvas');
        present = !!canvas;
      } catch (err) {}
      try {
        if (canvas) {
          var sample = document.createElement('canvas');
          sample.width = 8; sample.height = 8;
          var ctx = sample.getContext('2d');
          if (ctx) {
            ctx.drawImage(canvas, 0, 0, 8, 8);
            var px = ctx.getImageData(0, 0, 8, 8).data;
            var lit = 0;
            for (var i = 0; i < px.length; i += 4) {
              if (px[i + 3] > 0 && (px[i] > 0 || px[i + 1] > 0 || px[i + 2] > 0)) lit++;
            }
            nonBlank = lit > 0;
            sampled = 64;
          }
        }
      } catch (err) { nonBlank = null; sampled = 0; }
      try {
        parent.postMessage({ __airbotixRunReport: true, canvas: { present: present, nonBlank: nonBlank, sampled: sampled } }, '*');
      } catch (err) {}
    });
  } catch (err) {}
})();
</script>
<script>class Game {
  go() {}
}

//# sourceURL=src/scenes/Game.js
</script>
<script>new Game();
start();
//# sourceURL=main.js
</script>
</body></html>"
`;
